Fixing some landscape layout issues on phone

--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -33,3 +33,9 @@
     }
   }
 }
+
+@media screen and (max-height: 600px) {
+  .footer-container {
+    bottom: -100vh;
+  }
+}
